--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
-<h1>
-  {{title}}
-</h1>
+<div class="page-header">
+  <div class="container">
+    <h1>Router Sample</h1>
+    <div class="navLinks">
+      <a [routerLink]="['/homes']">Home</a>
+      <a [routerLink]="['/about']">About Us</a>
+      <a [routerLink]="['/contact']">Contact Us</a>
+      |
+      <a [routerLink]="['/products']">Products</a>
+      <a [routerLink]="['/login']">Login</a>
+      <a [routerLink]="['/protected']">Protected</a>
+    </div>
+  </div>
+</div>
+
+<div id="content">
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</div>
